--- a/next-app/package.json
+++ b/next-app/package.json
@@ -14,9 +14,6 @@
     "@supabase/auth-helpers-nextjs": "^0.5.2",
     "@supabase/supabase-js": "^2.1.1",
     "@tanstack/react-query": "^4.20.4",
-    "@types/node": "18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.10",
     "axios": "^1.2.2",
     "date-fns": "^2.29.3",
     "eslint": "8.30.0",
@@ -26,12 +23,15 @@
     "react-dom": "18.2.0",
     "react-error-boundary": "^3.1.4",
     "supabase": "^1.27.0",
-    "typescript": "4.9.4",
-    "zustand": "^4.1.4"
+    "zustand": "^4.2.0"
   },
   "devDependencies": {
+    "@types/node": "18.11.18",
+    "@types/react": "18.0.26",
+    "@types/react-dom": "18.0.10",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "typescript": "4.9.4"
   }
 }
